# Team_challenge_2

./: README.md
hyperion/: .gitignore  README.md  generate_models.py  pyproject.toml  requirements.txt
hyperion/company_structure/: admin.py  models.py  urls.py  views.py
hyperion/company_structure/migrations/: 0001_initial.py  0002_department_sections.py  0003_alter_department_sections_options.py  0004_subvision.py  0005_subdivision_delete_subvision.py  0006_shifts.py  0007_store_types_stores.py  0008_alter_departments_options_alter_subdivision_options.py
hyperion/equipments/: admin.py  models.py  urls.py  views.py
hyperion/equipments/migrations/: 0001_initial.py  0002_equipmentstypes_delete_departments.py  0003_kilns.py  0004_hardware_hardware_groups.py
hyperion/hyperion/: admin.py  asgi.py  middleware.py  routers.py  settings.py  urls.py  wsgi.py
hyperion/journals/: admin.py  forms.py  models.py  urls.py  views.py
hyperion/journals/migrations/: 0001_initial.py  0004_shiftmaterialsdebit.py  (+3 more)
hyperion/materials/: admin.py  models.py  urls.py  views.py
hyperion/navigation/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
hyperion/passports_designs/: admin.py  apps.py  models.py
hyperion/productions/: admin.py  models.py  urls.py  views.py
hyperion/tiles/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hyperion/units/: admin.py  models.py  urls.py  views.py
hyperion/users/: admin.py  models.py
hyperion/utils/: utils.py
hyperion/venvhyper/: pyvenv.cfg
hyperion/zip_app/: models.py  routers.py  urls.py  views.py
(+125 files in other folders)
