[project]
name = "hyperion"
version = "0.1.0"
description = ""
authors = [
    {name = "Rostyslav Bysko",email = "brn.h74@gmail.com"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xlrd (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = ">=3.10,<4"
Django = "4.2"
asgiref = "3.8.1"
django-environ = "0.12.0"
django-mssql-backend = "2.8.0"
mssql-django = "1.5"
pyodbc = "5.2.0"
pytz = "2025.2"
sqlparse = "0.5.3"
tzdata = "2025.2"